# pants-implicit-namespaces-typecheck

./: .gitignore  README.md  pants  pants.toml
libs/a/: BUILD  pyproject.toml  requirements.txt
libs/a/mycorp/a/: a.py
libs/b/: BUILD  pyproject.toml
libs/b/mycorp/b/: __init__.py
